--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,18 @@
-<ion-header>
-  <ion-navbar>
+ <ion-header>
+  <ion-navbar hideBackButton >
     <ion-title>
-      Ionic Blank
+      Loading Charts
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="addChart()"><ion-icon name="add-circle"></ion-icon></button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding >
+  <ion-list>
+    <ion-item *ngFor="let chart of charts" (click)="viewChart(chart)" >
+      {{chart.cname}}, on {{chart.ddate}}, {{chart.camount}} containers
+    </ion-item>
+  </ion-list>
 </ion-content>
